<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    tools:context=".GirisSayfasi">


    <TextView
        android:id="@+id/baslik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/harry_potter"
        android:textAlignment="center"
        android:textColor="#00ffcc"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/kullaniciadi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="#ffffff"
        android:backgroundTint="#ffffff"
        android:ems="10"
        android:foreground="@drawable/yuvarlatilmis"
        android:hint="@string/kullan_c_ad"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:textAlignment="viewStart"
        android:textColor="#242424"
        android:textColorHint="#78909C"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/baslik" />

    <EditText
        android:id="@+id/posta"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:backgroundTint="#ffffff"
        android:ems="10"
        android:foreground="@drawable/yuvarlatilmis"
        android:hint="@string/e_mail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:textAlignment="viewStart"
        android:textColor="#242424"
        android:textColorHint="#78909C"
        android:textStyle="bold"
        app:layout_column="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kullaniciadi"
        app:layout_row="0" />

    <EditText
        android:id="@+id/sifre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:backgroundTint="#ffffff"
        android:ems="10"
        android:foreground="@drawable/yuvarlatilmis"
        android:hint="@string/sifre"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:textAlignment="viewStart"
        android:textColor="#242424"
        android:textColorHint="#78909C"
        android:textStyle="bold"
        app:layout_column="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/posta"
        app:layout_row="1" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sifre">

        <Button
            android:id="@+id/gonder"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:backgroundTint="#ff8800"
            android:onClick="giris"
            android:text="@string/giris"
            android:textColor="#ffffff"
            app:layout_column="0"
            app:layout_row="2"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/kaydol"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#ff0088"
            android:onClick="kaydol"
            android:text="@string/kaydol"
            android:textColor="#ffffff"
            app:layout_column="2"
            app:layout_row="2"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <Button
        android:id="@+id/unuttum"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:onClick="unuttum"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/ifremi_unuttum"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#FFffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_column="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_row="3"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>