<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#243636"
    tools:context=".SifreYenileme">


    <Button
        android:id="@+id/gonder"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:onClick="sifreDegistir"
        android:text="@string/g_nder"
        android:textColor="#00ff88"
        app:layout_column="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/posta"
        app:layout_row="2" />

    <TextView
        android:id="@+id/baslik"
        android:layout_width="293dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:outlineAmbientShadowColor="#00FFFFFF"
        android:outlineSpotShadowColor="#00FFFFFF"
        android:shadowColor="#00FFFFFF"
        android:text="@string/ifre_yenileme"
        android:textAlignment="center"
        android:textColor="#ff00ff"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/posta"
        android:layout_width="265dp"
        android:layout_height="50dp"
        android:layout_marginTop="96dp"
        android:background="#ffffff"
        android:backgroundTint="#ffffff"
        android:ems="10"
        android:foreground="@drawable/yuvarlatilmis"
        android:hint="@string/e_mail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="5dp"
        android:paddingEnd="0dp"
        android:textAlignment="viewStart"
        android:textColor="#242424"
        android:textColorHint="#78909C"
        android:textStyle="bold"
        app:layout_column="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/baslik"
        app:layout_row="0" />

</androidx.constraintlayout.widget.ConstraintLayout>